--- a/tutorials/tutorial13/app/views/users/index.html.erb
+++ b/tutorials/tutorial13/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Users Data</h1>
 <div class="createbtn">
-<%=link_to "Create", new_user_path %>
+<%= link_to "Create", new_user_path %>
 </div>
 <table>
   <thead>
@@ -15,11 +15,49 @@
     <td><%= user.name %></td>
     <td><%= user.email %></td>
     <td><%= user.address %></td>
-    <td><%= user.phone_number%></td>
+    <td><%= user.phone_number %></td>
     <td>
       <%= link_to "Edit", edit_user_path(user) %>
-      <%= link_to "Delete", user, method: :delete, data: { confirm: "Are you sure you want to delete this user?"} %>
+      <%= link_to "Delete", user, method: :delete, data: { confirm: "Are you sure you want to delete this user?" } %>
     </td>
   </tr>
   <% end %>
 </table>
+
+<% @sql = "SELECT
+          DATE_FORMAT(`created_at`, '%m') as `date`,
+          COUNT(*) as `count`
+      FROM `users`
+      GROUP BY MONTH(`created_at`)" %>
+<% @records_array = ActiveRecord::Base.connection.execute(@sql).to_h %>
+
+
+
+<canvas id="myChart" style="width:100%;max-width:500px"></canvas>
+
+<script>
+var xValues = ["January", "February", "March", "April", "May","June","July","August","September","October","November","December"];
+var yValues = [<%= @records_array["01"] %>,<%= @records_array["02"] %>,<%= @records_array["03"] %>,<%= @records_array["04"] %>,
+               <%= @records_array["05"] %>,<%= @records_array["06"] %>,<%= @records_array["07"] %>,<%= @records_array["08"] %>,
+               <%= @records_array["9"] %>,<%= @records_array["10"] %>,<%= @records_array["11"] %>,<%= @records_array["012"] %>]
+var barColors = ["black","pink","blue","green","yellow","red","violet","orange","brown","purple","cyan","teal"];
+
+new Chart("myChart", {
+  type: "bar",
+  data: {
+    labels: xValues,
+    datasets: [{
+      backgroundColor: barColors,
+      data:  yValues
+    }]
+  },
+  options: {
+    legend: {display: false},
+    title: {
+      display: true,
+      text: "Chart of User Creation per Month"
+    }
+  }
+});
+</script>
+<%= @name %>
